@@ -4,7 +4,7 @@
 /* This string is written to the output primary header as CAL_VER. */
 
 
-# define WF3_CAL_VER "3.5.0(Oct-09-2018)"
-# define WF3_CAL_VER_NUM "3.5.0"
+# define WF3_CAL_VER "3.5.1(Jun-24-2020)"
+# define WF3_CAL_VER_NUM "3.5.1"
 
 #endif /* INCL_WF3VERSION_H */
