@@ -1,122 +1,140 @@
-#include <math.h>
 #include <stdio.h>
 #include <stddef.h>
 #include <stdlib.h>
-#include <time.h>
+
+#define INSERT_SORT_LIMIT 7
+#define AUX_STORAGE 50
 
 /* This file has been updated to contain only a sort routine, 
 ** as well as utilities for allocating and freeing arrays.
 ** All other routines were determined to be obsolete.
-**
-**	sort 
-**	vector
-**	free_vector
-**	ivector
-**	free_ivector
 */
 
-float *vector(int nl, int nh);
-void free_vector(float *v, int nl, int nh);
-int *ivector(int nl, int nh);
-void free_ivector(int *v, int nl, int nh);
-void randomizedQSort(float array[], int p, int r);
-int randomizedPartition(float array[], int p, int r);
-int partition(float array[], int p, int r);
-
-/* This is a recursive implementation of quick sort with a randomized 
- * partition which accepts a floating point array and the number of 
- * points in the array.  The implementation is based on discussion 
- * found in "Introduction to Algorithms" by Cormen, Leiserson, and Rivest.
- * This routine replaces the former proprietary sort code.
- * 
- * In order to maintain the function prototype of the original
- * routine, the new sort() is a thin wrapper around the actual 
- * recursive sorting routine.  The wrapper only accepts two parameters, 
- * and the array is expected to be called as array-1 which is 
- * what the original sort expected. This "off by 1" and then
- * correctd in the wrapper before the recursive routine is called. 
- */ 
-int sort (float array[], int n) {
-    int p = 0;
-    int r = n - 1;
-
-    srand(time(NULL));
-    randomizedQSort(array+1, p, r);
+/* Allocate an int vector with subscript range data[nlow..nhigh] */
+int *ivector(int nlow, int nhigh) {
+    int *data = NULL;
  
-    return(0);
+    data = (int *)calloc((size_t)(nhigh - nlow + 1 + 1), (size_t)sizeof(int));
+    return data - nlow + 1;
+}
+ 
+/* Free an int vector allocated with ivector */
+void free_ivector(int *data, int nlow) {
+    free((char *) (data + nlow - 1));
 }
 
+/* Simple swap routine */
 void swap(float *a, float *b) {
   float c = *a;
   *a = *b;
   *b = c;
 }
 
-/* Partition the array into two non-empty subarrays which
- * are sorted by recursive calls. Each element of the
- * array[p..pivot-1] <= each element of array[pivot+1..r].
+/*
+ * Sort array of length n (1-n) in ascending order.
+ * ATTN: Note the beginning index of "1" and not "0".
  */
-void randomizedQSort(float array[], int p, int r) {
-    if (p < r) {
-        int pivot = randomizedPartition(array, p, r);
-        randomizedQSort(array, p, pivot - 1);
-        randomizedQSort(array, pivot + 1, r);
-    }
+int sort(float array[], int n) {
+
+    int l = 1;
+	int m = n;
+	int jstack = 0, *auxStack;
+	float aDataValue;
+
+    /*
+     * Quick sort needs some auxiliary storage as a stack data structure
+     */
+	auxStack = ivector(1, AUX_STORAGE);
+	if (auxStack == NULL) 
+        return (1);
+
+    /*
+     * Continuous loop
+     */
+	for (;;) {
+        /* 
+         * When there are few enough data values, switch to insertion sort.
+         */
+		if (m - l < INSERT_SORT_LIMIT) {
+            int i;
+			for (int j = l + 1; j <= m; j++) {
+				aDataValue = array[j];
+				for (i = j - 1; i >= l; i--) {
+					if (array[i] <= aDataValue) 
+                        break;
+					array[i + 1] = array[i];
+				}
+				array[i + 1] = aDataValue;
+			}
+			if (jstack == 0) 
+                break;
+
+            /* 
+             * Pop the data off the stack in preparation for the new partitioning cycle
+             */
+			m = auxStack[jstack--];
+			l = auxStack[jstack--];
+
+        /*
+         * quick sort
+         */
+		} else {
+            /* Median of left, center, and right elements is the pivot */
+            int k = (l + m) / 2;
+			swap(&array[k], &array[l + 1]);
+			if (array[l] > array[m]) {
+				swap(&array[l], &array[m]);
+			}
+			if (array[l + 1] > array[m]) {
+				swap(&array[l + 1], &array[m]);
+			}
+			if (array[l] > array[l + 1]) {
+				swap(&array[l], &array[l + 1]);
+			}
+
+            /* 
+             * Setup the indices for the partitioning
+             */
+			int i = l + 1;
+			int j = m;
+			aDataValue = array[l + 1];
+			for (;;) {
+                /* Find element > aDataValue */
+				do {
+                    i++; 
+                } while (array[i] < aDataValue);
+
+                /* Find element < aDataValue */
+				do {
+                    j--; 
+                } while (array[j] > aDataValue);
+
+                /* The search indices have crossed, so the partition is done. */
+				if (j < i) 
+                    break;
+
+                /* Swap the elements so they are in the proper subarray according to their magnitude. */
+				swap(&array[i], &array[j]);
+			}
+			array[l + 1] = array[j];
+			array[j] = aDataValue;
+			jstack += 2;
+			if (jstack > AUX_STORAGE) {
+			    return (1);
+			}
+			if (m - i + 1 >= j - l) {
+				auxStack[jstack] = m;
+				auxStack[jstack - 1] = i;
+				m = j - 1;
+			} else {
+				auxStack[jstack] = j - 1;
+				auxStack[jstack - 1] = l;
+				l = i;
+			}
+		}
+	}
+
+	free_ivector(auxStack, 1);
+	return (0);
 }
 
-/* The randomized partition tries to ensure a good 
- * choice for the pivot on average.
- */
-int randomizedPartition(float array[], int p, int r) {
-
-    /* Generate a random number in the range from p...r */
-    int tmp = p + (rand() % (r - p + 1));
-
-    swap(&array[tmp], &array[r]);
-    return (partition(array, p, r));
-}
-
-int partition(float array[], int p, int r) {
-    int i = p - 1;
-    for (int j = p; j <= r; j++) {
-        if (array[j] <= array[r]) {
-            swap(&array[++i], &array[j]);
-        }
-    }
-    return(i);
-}
-
-#define NR_END 1
-#define FREE_ARG char*
-
-float *vector(int nl, int nh)
-/* allocate a float vector with subscript range v[nl..nh] */
-{
-	float *v;
-
-	v=(float *)malloc((size_t) ((nh-nl+1+NR_END)*sizeof(float)));
-	return v-nl+NR_END;
-}
-
-void free_vector(float *v, int nl, int nh)
-/* free a float vector allocated with vector() */
-{
-	free((FREE_ARG) (v+nl-NR_END));
-}
-
-int *ivector(int nl, int nh) {
-/* allocate an int vector with subscript range v[nl..nh] */
-        int *v;
- 
-	v = NULL;
-        v=(int *)malloc((size_t) ((nh-nl+1+NR_END)*sizeof(int)));
-        return v-nl+NR_END;
-}
- 
-void free_ivector(int *v, int nl, int nh) {
-/* free an int vector allocated with ivector */
-        free((FREE_ARG) (v+nl-NR_END));
-}
- 
-#undef NR_END
-#undef FREE_ARG
