@@ -1,3 +1,8 @@
+### 24-Jun-2020 - MDD -- Version 10.2.4 
+    Removed/modified/updated routines which used copyrighted code.
+    Updates implemented Oct 2019, but installation delayed for higher 
+    priority updates.
+
 ### 29-Apr-2020 - MDD -- Version 10.2.3 
     Modified "dodqi" to accommodate the A-to-D saturation threshold 
     which is now defined in the CCDTAB. The threshold is no longer 
